fix(core): respect Event interface channels() override in Envelope